--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.0",
     "chartjs": "^0.3.24",
     "framer-motion": "^6.5.1",
     "protected-route-react": "^1.0.1",
